assets_rebalance_infra/k8s/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assetsrebalancefront
  namespace: assetsrebalance
spec:
  selector:
    app: assetsrebalancefront
  ports:
    - name: http 
      protocol: TCP
      port: 3000
      targetPort: 3000
