assets_rebalance_infra/k8s/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assetsrebalancefront
  namespace: assetsrebalance
  labels:
    name: assetsrebalancefront
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: assetsrebalancefront
            port: 
              number: 3000
